Align itens fixed

--- a/src/Pages/login/Login.module.css
+++ b/src/Pages/login/Login.module.css
@@ -70,6 +70,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     color: white;
 }
 .formLogin p:nth-child(1){
